set landing page

--- a/_pages/main.html
+++ b/_pages/main.html
@@ -1,10 +1,11 @@
 ---
 layout: archive
-permalink: /blog-posts
+permalink: /cv
 title: 
 author_profile: true
 redirect_from:
-  - /wordpress/blog-posts/
+  <!-- - /wordpress/blog-posts/ -->
+  - \cv
 ---
 
 {% include base_path %}
