redirect fix landing page

--- a/_pages/main.html
+++ b/_pages/main.html
@@ -1,11 +1,12 @@
 ---
 layout: archive
-permalink: /cv
+permalink: /
 title: 
 author_profile: true
 redirect_from:
   <!-- - /wordpress/blog-posts/ -->
-  - \cv
+  - /main/
+  - /main.html
 ---
 
 {% include base_path %}
